# Audio-and-video-backend-framework

shared/: README.en.md  README.md  tmp.pcap
shared/3rd/xiaoBsevser/: xiaoBsevser.pro
shared/GbClient/: GbClient.sln
shared/SubServer/SipSubService/cmake/: CMakeCache.txt  CMakeLists.txt  CMakeLists副本.txt  Makefile  cmake_install.cmake
shared/conf/: SipSubService.conf  SipSupService.conf
shared/log/: SipServer.log.ubuntu.lyf.log.INFO.20240707-011912.25398  SipServer.log.ubuntu.lyf.log.INFO.20240707-011926.25421  SipServer.log.ubuntu.lyf.log.INFO.20240707-012147.25422  SipServer.log.ubuntu.lyf.log.INFO.20240707-164704.72372  SipServer.log.ubuntu.lyf.log.INFO.20240707-175207.72574  SipServer.log.ubuntu.lyf.log.INFO.20240707-182154.72675  SipServer.log.ubuntu.lyf.log.INFO.20240707-185018.72827  SipServer.log.ubuntu.lyf.log.INFO.20240802-012816.2412291  SipServer.log.ubuntu.lyf.log.INFO.20240802-012935.2412902  SipServer.log.ubuntu.lyf.log.INFO.20240803-114706.2445366  SipServer.log.ubuntu.lyf.log.INFO.20240803-121108.2455348  SipServer.log.ubuntu.lyf.log.INFO.20240803-130102.2475929  SipServer.log.ubuntu.lyf.log.INFO.20240803-130427.2477941  SipServer.log.ubuntu.lyf.log.INFO.20240803-130431.2478015  SipServer.log.ubuntu.lyf.log.INFO.20240804-001743.2504500  SipServer.log.ubuntu.lyf.log.INFO.20240804-001744.2504535  SipServer.log.ubuntu.lyf.log.INFO.20240804-002139.2507253  SipServer.log.ubuntu.lyf.log.INFO.20240804-002140.2507303  SipServer.log.ubuntu.lyf.log.INFO.20240804-003154.6097  SipServer.log.ubuntu.lyf.log.INFO.20240804-003227.6525  SipServer.log.ubuntu.lyf.log.INFO.20240804-194915.50282  SipServer.log.ubuntu.lyf.log.INFO.20240804-194917.50328  SipServer.log.ubuntu.lyf.log.INFO.20240804-195852.56149  SipServer.log.ubuntu.lyf.log.INFO.20240804-195854.56197  SipServer.log.ubuntu.lyf.log.INFO.20240805-214139.122100  SipServer.log.ubuntu.lyf.log.INFO.20240805-214142.122146  SipServer.log.ubuntu.lyf.log.INFO.20240806-045304.290109  SipServer.log.ubuntu.lyf.log.INFO.20240806-045326.290524  SipServer.log.ubuntu.lyf.log.INFO.20240806-051421.302941  (+9 more)
(+132 files in other folders)
